make path users method get

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "import/extensions": "off",
         "linebreak-style": "off"
     }
 }
