--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     },
     "rules": {
         "import/extensions": "off",
+        "import/prefer-default-export": "off",
         "linebreak-style": "off"
     }
 }
